# APSS-Reference-PCBs

Breadboard Adapters/GPS01-TD/: GPS01-TD.PrjPcb  PCB.PcbDoc  Schematic.SchDoc  outjob.OutJob
Breadboard Adapters/GPS01-TD to PA1616D Adapter/: GPS01-TD to PA1616D.PrjPcb  PCB.PcbDoc  Schematic.SchDoc  outjob.OutJob
Breadboard Adapters/GPS01-TD/Libraries/: CONMHF1-SMD-T.IntLib  GPS01-TD.SchLib  GPS01-TD.pcblib
PSat/: LoRa Packet Format v2.xlsx  README.md
PSat/Base Station/: Base Station Pin Mappings.xlsx  ~$Base Station Pin Mappings.xlsx
PSat/Base Station/Rust/: Cargo.toml  changes_for_v2.txt
PSat/Beacon/: Beacon.PcbDoc  Beacon.SchDoc  PSat Beacon.PrjPcb  README.md
PSat/Beacon/Firmware/: GPS Packet Format.xlsx  (+1 more)
PSat/Docs/: v2.0pinout.drawio  v2.1pinout.drawio
PSat/MCU/: MCU.PcbDoc  MCU.SchDoc  PSat MCU.PrjPcb  README.md  outjob.OutJob
PSat/MCU/Firmware/Rust/: Cargo.toml  README.md  run.sh
PSat/MCU/Firmware/Rust/.cargo/: config.toml
PSat/MCU/Firmware/Rust/docs/: State_machine.drawio
PSat/MCU/Firmware/Rust/src/: board.rs  defmt_impl.rs  gps.rs  icm42670.rs  imu.rs  led.rs  lora.rs  main.rs  panic_handler.rs  pin_mappings_v2_0.rs  pin_mappings_v2_1.rs  serial.rs
PSat/Multibattery Charger/: Charger.SchDoc  MBC PCB.PcbDoc  Main.SchDoc  Multibattery Charger.PrjPcb  Multibattery Charger.PrjPcbStructure  Outputs.OutJob
PSat/PSU/: ERRATA.md  Main.SchDoc  PSU.PcbDoc
PSat/Programming Adapter/: PPCB_Programming_Adaptor.PrjPcb  Prog_Adaptor.PcbDoc  Prog_Adaptor.SchDoc
Shared Libraries/: APSS Generic Components.SchLib  APSS Prototype Parts.SchLib
(+57 files in other folders)
