[package]
name = "apss_mcu_pcb_firmware"
version = "0.1.0"
edition = "2024"

[features]
fresh_start = []
debug_print = []

[dependencies]
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }
msp430-rt = "0.4.0"
msp430fr2355 = { version = "0.5.1", features = ["rt", "critical-section"] }
msp430fr2x5x-hal = "0.5"

embedded-hal = { version = "1.0" }
embedded-hal-nb = "1.0"
nb = "*"
ufmt = "0.2"
ufmt-utils = "0.2"

embedded-lora-rfm95 = "0.3"
embedded-hal-bus = {version = "0.3", default-features = false, features = ["portable-atomic"]}
portable-atomic = "1.11"

bmp390 = {version = "0.4", features = ["sync"]}
uom = { version = "0.36.0", default-features = false, features = ["f32", "si"] }

icm42670 = {git = "https://github.com/rossporter506/icm42670-batch"}
mx25v = {git = "https://github.com/rossporter506/mx25v-rs", features = ["defmt"]}

arrayvec = {version = "0.7", default-features = false }
static_cell = {version = "2.1"}
fixed = "1.29"

static_assertions = "1.1"
embedded-storage = "0.3.1"
embedded-io = "0.6"

defmt = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "debuginfo" # Replace with `strip = true` to make final executable smaller, but unable to analyze with `cargo bloat`.

[profile.dev]
opt-level = "s"
codegen-units = 1
debug = true

[profile.dev.package."*"]
opt-level = "z"

[lints.clippy]
identity_op = "allow"
